# otarover

./: README.md  meson.build  meson_options.txt
driver/platform/blue/: Makefile  blue_drv.c  blue_drv.h  otarover_blue_drv.c  otarover_blue_drv.h  otarover_blue_io.c  otarover_blue_ioctl.h
driver/platform/linux/blue/: Makefile  otarover_blue_bat.h  otarover_blue_drv.c  otarover_blue_drv.h  otarover_blue_io.c  otarover_blue_io.h  otarover_blue_sensors.c  otarover_blue_sensors.h
inc/: otarover_platform.h  otaroverlib.h
inc/platform/linux/: otarover_ioctl.h
inc/strategy/: otarover_strategy.h
lib/: otaroverlib.c
src/: main.c  main.c.save
src/net/: otarover_protocol.c  otarover_protocol.h
src/platform/blue/: platform_blue.c
src/platform/linux/blue/: platform_linux_blue.c
src/strategy/: otarover_tank.c
src/tools/cli/: main.c
test/client/: otarover_cli_test.py  otarover_protocol.py
